<resources>
    <string name="app_name">FunkyReservation</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAvTTtMTb4R4io8IFzGqJVyRMy2Yn8y-sU</string>
    <string name="title_activity_main">Funky Reservation</string>
    <string name="reservations_list">My reservations</string>
    <string name="find_a_restaurant">Find a restaurant</string>
    <string name="title_activity_list_view">list_view</string>
    <string name="action_settings">Settings</string>
    <string name="filter_button">Filter</string>
    <string name="map_view">Map View</string>

    <string name="title_activity_restaurant_list_view">RestaurantListView</string>
    <string name="list_view">List view</string>
    <string name="title_activity_table_view">TableView</string>
    <string name="check_avail">Check availability</string>
    <string name="reserve">Reserve</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="back">Back</string>

    <string name="select_food">Genre of food:</string>
    <string name="select_price">Price range (per meal):</string>
    <string name="select_radius">Radius:</string>
    <string name="select_ratings">Ratings (at least):</string>
    <string name="select_date">Available reservations:</string>
    <string name="select_people">For (number of people):</string>
    <string name="select_name">Name:</string>

    <string name="reservation_accepted_title">Reservation accepted</string>
    <string name="back_to_search">Back to search</string>

    <string name="min_price">0</string>
    <string name="max_price">100</string>
    <string name="min_rating">0</string>
    <string name="max_rating">5</string>
    <string name="title_activity_restaurant_details">RestaurantDetails</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="restaurant">Restaurant</string>
    <string name="n_persons">n persons</string>
    <string name="date_and_time">Date and time</string>
    <string name="table_x">Table: x</string>
    <string name="confirmed">Confirmed</string>
    <string name="ActivityTitleReservations">My reservations</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="title_activity_login">Login</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="feedback">Feedback</string>
    <string name="username">Username: </string>
    <string name="firstname">First name: </string>
    <string name="lastname">Last name: </string>
    <string name="password">Password: </string>
    <string name="logout">Log out</string>
</resources>
