<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="funky.pom16.funkyreservation.LoginActivity"
    android:background="@color/background_color">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_logo"
        android:id="@+id/home_logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/home_logo"
        android:layout_alignParentEnd="true"
        android:windowSoftInputMode="adjustResize"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/username_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:typeface="sans"
                android:id="@+id/UserNameTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/usernameEditText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/PasswordTextView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:background="@color/button_color"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:typeface="sans"
            android:onClick="userLogin"
            android:drawableLeft="@android:drawable/ic_menu_send" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/register"
            android:id="@+id/register_button"
            android:background="@color/button_color"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:typeface="sans"
            android:onClick="userRegister"
            android:drawableLeft="@android:drawable/ic_menu_send"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</RelativeLayout>