<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="funky.pom16.funkyreservation.MainActivity"
    android:background="@color/background_color" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_logo"
        android:id="@+id/home_logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/home_logo"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/welcome" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/find_a_restaurant"
            android:id="@+id/home_find"
            android:background="@color/button_color"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:typeface="sans"
            android:onClick="findARestaurantList"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="My reservations"
            android:id="@+id/reservations_list"
            android:background="@color/button_color"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:typeface="sans"
            android:onClick="seeReservations"
            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/logout"
            android:id="@+id/logout_button"
            android:background="@color/button_color"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:typeface="sans"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:onClick="logOut"
            android:layout_marginTop="20dp" />
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/feedback"
            android:id="@+id/feedback_button"
            android:background="@color/button_color"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:typeface="sans"
            android:onClick="sendFeedback"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</RelativeLayout>
